# obs-plugintemplate

./: CMakeLists.txt
cmake/: PluginHelpers.cmake
